--- a/fds prac.ipynb
+++ b/fds prac.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOBptB2xD9XxQ2JIu9aKlpb",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMyqddWpINNdrs3oGzUr044",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,6 +89,185 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a.shape)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ogpSQY4ced4H",
+        "outputId": "5a8f4f45-4cd8-4b29-c404-8943edfba499"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(3,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(a[0],a[1],a[2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xqNlo250ejbM",
+        "outputId": "bd29899f-87c9-43c4-a012-0150a80e8082"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b=np.array([[1,2],[3,4]])"
+      ],
+      "metadata": {
+        "id": "lm_6J0Yoesks"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xq0FG09OpZiT",
+        "outputId": "8bc84bf7-2789-4558-f0e4-b32fba43cba9"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2],\n",
+              "       [3, 4]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(b.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5VQLFRyEpqv5",
+        "outputId": "c60bd4ca-564e-43cd-d56d-31360a2f40db"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(2, 2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(b[0,0],b[0,1],b[1,1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dC5pYTKWpwcy",
+        "outputId": "55ad291d-1fae-44ab-d070-b10e896e9c98"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c=np.array([[1,2],[3,4],[5,6]])\n",
+        "c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kKIsPqE3p8aC",
+        "outputId": "8c1a92d6-6a53-4f38-ecca-1649afa9c9e5"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2],\n",
+              "       [3, 4],\n",
+              "       [5, 6]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "print(c[0,1],c[1,0],c[2,0],c[2,1])\n"
+      ],
+      "metadata": {
+        "id": "jR3MIASjqRfi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "HuJ6SaH6qjL3"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
