--- a/fds practical 1 26aug.ipynb
+++ b/fds practical 1 26aug.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN32MLiRBgz6TrRjG6LcNui",
+      "authorship_tag": "ABX9TyNTK8XHSDooulNApZxNS8b6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,6 +106,37 @@
         "\n",
         "for row in cur.execute('select * from species;'):\n",
         "  print(row)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sqlite3\n",
+        "con=sqlite3.connect(\"portal_mammals.sqlite\")\n",
+        "cur=con.cursor()\n",
+        "cur.execute('SELECT PLOT_ID from plots WHERE plot_type=\"control\"')\n",
+        "print(cur.fetchall())\n",
+        "cur.execute('SELECT species FROM species WHERE taxa=\"Bird\"')\n",
+        "print(cur.fetchone())\n",
+        "con.close()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GIprzgTgHoMm",
+        "outputId": "581252be-8d58-4409-a4bf-a3fb15099e87"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[]\n",
+            "('bilineata',)\n"
+          ]
+        }
       ]
     }
   ]
