--- a/fds practical 1 26aug.ipynb
+++ b/fds practical 1 26aug.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNTK8XHSDooulNApZxNS8b6",
+      "authorship_tag": "ABX9TyNO6ECHaYUFHAE6FH+18M4e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,7 +114,7 @@
         "import sqlite3\n",
         "con=sqlite3.connect(\"portal_mammals.sqlite\")\n",
         "cur=con.cursor()\n",
-        "cur.execute('SELECT PLOT_ID from plots WHERE plot_type=\"control\"')\n",
+        "cur.execute('SELECT plot_id from plots WHERE plot_type=\"Control\"')\n",
         "print(cur.fetchall())\n",
         "cur.execute('SELECT species FROM species WHERE taxa=\"Bird\"')\n",
         "print(cur.fetchone())\n",
@@ -125,15 +125,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GIprzgTgHoMm",
-        "outputId": "581252be-8d58-4409-a4bf-a3fb15099e87"
+        "outputId": "f0e6303f-30c5-420a-a601-86fd89da3617"
       },
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[]\n",
+            "[(2,), (4,), (8,), (11,), (12,), (14,), (17,), (22,)]\n",
             "('bilineata',)\n"
           ]
         }
